<resources>
    <string name="app_name">Kaltura Player Test App</string>
    <string name="action_settings">Settings</string>
    <string name="menu_login">Log in</string>
    <string name="menu_logout">Log out</string>
    <string name="login_label">Log In</string>
    <string name="email_label">Email</string>
    <string name="password_label">Password</string>
    <string name="title_sign_in">Welcome</string>
    <string name="sign_up">Sign Up</string>
    <string name="hint_password">password</string>
    <string name="hint_email">email</string>
    <string name="sign_in">Sign In</string>
    <string name="jsons">Content</string>
    <string name="message_no_results">No Results</string>
    <string name="add_folder">Add Folder</string>
    <string name="add_scanned_items">Scan QR Code</string>
    <string name="add_json">Add Configuration</string>
    <string name="remove_folder">Remove Folder</string>
    <string name="remove_json">Remove Test</string>
    <string name="add_default_items">Add Default Items</string>
    <string name="delete_all">Delete All</string>
    <string name="about">About</string>
    <string name="about_device">Device Info</string>
    <string name="dialog_button_close">Close</string>
    <string name="selection_disabled">Disabled</string>
    <string name="selection_default">Default</string>
    <string name="network_connected">Network Connected</string>
    <string name="network_disconnected">Network Disconnected</string>
    <string name="error_empty_input">Error, bad input</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="title_activity_main">Barcode Reader Sample</string>
    <string name="barcode_header">Click &quot;Read Barcode&quot; to read a barcode</string>
    <string name="read_barcode">Read Barcode</string>
    <string name="auto_focus">Auto Focus</string>
    <string name="use_flash">Use Flash</string>
    <string name="barcode_success">Barcode read successfully</string>
    <string name="barcode_failure">No barcode captured</string>
    <string name="barcode_error">"Error reading barcode: %1$s"</string>
</resources>
